<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.webjars</groupId>
    <artifactId>modellbahn-ui</artifactId>
    <version>1.1.0</version>
    <packaging>jar</packaging>

    <name>ModellBahn UI</name>
    <description>WebJar for ModellBahn UI</description>
    <url>https://github.com/linepro/ModellBahn-ui</url>

    <inceptionYear>2018</inceptionYear>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>andrew-goff</id>
            <name>Andrew Goff</name>
            <url>https://github.com/andrew-goff</url>
            <timezone>0</timezone>
        </developer>
        <developer>
            <id>linepro</id>
            <name>John Goff</name>
            <url>https://github.com/linepro</url>
            <timezone>0</timezone>
        </developer>
    </developers>

    <contributors></contributors>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/linepro/ModellBahn-ui/issues</url>
    </issueManagement>

    <mailingLists></mailingLists>

    <scm>
        <url>https://github.com/linepro/ModellBahn-ui</url>
        <connection>scm:git:git://github.com/linepro/ModellBahn-ui.git</connection>
        <developerConnection>scm:git:git@github.com:linepro/ModellBahn-ui.git</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <java.version>11</java.version>
        <javac.version>11</javac.version>
        <maven.compile.source>${javac.version}</maven.compile.source>
        <maven.compile.target>${javac.version}</maven.compile.target>
        <maven.compiler.release>11</maven.compiler.release>
        <maven.version>3.8.1</maven.version>

        <!-- plugins -->
        <dependency-check-maven.version>7.1.0</dependency-check-maven.version>
        <maven-changelog-plugin.version>2.3</maven-changelog-plugin.version>
        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven-deploy-plugin.version>3.0.0-M2</maven-deploy-plugin.version>
        <maven-enforcer-plugin.version>3.0.0</maven-enforcer-plugin.version>
        <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
        <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
        <maven-javadoc-plugin.version>3.4.0</maven-javadoc-plugin.version>
        <maven-plugin-plugin.version>3.6.4</maven-plugin-plugin.version>
        <maven-pmd-plugin.version>3.16.0</maven-pmd-plugin.version>
        <maven-project-info-reports-plugin.version>3.3.0</maven-project-info-reports-plugin.version>
        <maven-release-plugin.version>3.0.0-M5</maven-release-plugin.version>
        <maven-replacer-plugin.version>1.5.3</maven-replacer-plugin.version>
        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
        <maven-scm-plugin.version>1.13.0</maven-scm-plugin.version>
        <maven-site-plugin.version>3.12.0</maven-site-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M6</maven-surefire-plugin.version>
        <versions-maven-plugin.version>2.10.0</versions-maven-plugin.version>
        <wagon-ssh.version>3.5.1</wagon-ssh.version>

        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
        <maven.test.skip>true</maven.test.skip>

        <!-- dependency versions -->
    </properties>

    <dependencies>
    </dependencies>

    <build>
       <resources>
           <resource>
               <directory>WebContent</directory>
           </resource>
       </resources>

        <plugins>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <rules>
                        <requireMavenVersion>
                            <version>${maven.version}</version>
                        </requireMavenVersion>
                    </rules>
                    <fail>true</fail>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-scm-plugin</artifactId>
                <version>${maven-scm-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
                <configuration>
                    <outputDirectory>${destDir}</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest/>
                    </archive>
                </configuration>
            </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
            <plugin>
                <artifactId>maven-changelog-plugin</artifactId>
                <version>${maven-changelog-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-plugin-plugin</artifactId>
                <version>${maven-plugin-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${maven-pmd-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-site-plugin</artifactId>
                <version>${maven-site-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.wagon</groupId>
                        <artifactId>wagon-ssh</artifactId>
                        <version>${wagon-ssh.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <reporting>
                        <plugins>
                            <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-checkstyle-plugin</artifactId>
                                <version>${maven-checkstyle-plugin.version}</version>
                            </plugin>
                            <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-javadoc-plugin</artifactId>
                                <version>${maven-javadoc-plugin.version}</version>
                            </plugin>
                            <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-project-info-reports-plugin</artifactId>
                                <version>${maven-project-info-reports-plugin.version}</version>
                            </plugin>
                        </plugins>
                    </reporting>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-install-plugin</artifactId>
                <version>${maven-install-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven-deploy-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <version>${maven-replacer-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>
                            ${project.build.directory}/classes/META-INF/resources/webjars/font-awesome/${project.version}/css/*.css
                        </include>
                    </includes>
                    <inputFilePattern>(.*).css</inputFilePattern>
                    <outputFilePattern>$1-jsf.css</outputFilePattern>
                    <replacements>
                        <replacement>
                            <token>url\((["']?)\.\.\/webfonts\/([^"?#)]*)(?:\??#([^")]*))?\1\)</token>
                            <value>url("#{resource['webjars:font-awesome/${project.version}/webfonts/$2']}&amp;#$3")</value>
                        </replacement>
                    </replacements>
                    <regex>true</regex>
                    <regexFlags>
                        <regexFlag>CASE_INSENSITIVE</regexFlag>
                    </regexFlags>
                    <unescape>true</unescape>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin.version}</version>
                    <configuration>
                        <reportSets>
                            <reportSet>
                                <reports>
                                    <report>dependency-updates-report</report>
                                    <report>plugin-updates-report</report>
                                    <report>property-updates-report</report>
                                </reports>
                            </reportSet>
                        </reportSets>
                        <ruleset comparisonMethod="maven">
                            <ignoreVersions>
                                    <ignoreVersion type="regex">.*-beta?</ignoreVersion>
                                    <ignoreVersion type="regex">.*\.Alpha?</ignoreVersion>
                            </ignoreVersions>
                        </ruleset>
                    </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <artifactId>maven-site-plugin</artifactId>
                <configuration>
                    <reporting>
                        <plugins>
                            <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-project-info-reports-plugin</artifactId>
                            </plugin>
                        </plugins>
                    </reporting>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                    <configuration>
                      <reportSets>
                        <reportSet>
                          <reports>
                            <report>plugin-updates-report</report>
                            <report>property-updates-report</report>
                          </reports>
                        </reportSet>
                      </reportSets>
                      <ruleset comparisonMethod="maven">
                        <ignoreVersions>
                          <ignoreVersion type="regex">.*-beta?</ignoreVersion>
                          <ignoreVersion type="regex">.*\.Alpha?</ignoreVersion>
                        </ignoreVersions>
                      </ruleset>
                    </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>${dependency-check-maven.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>${maven-project-info-reports-plugin.version}</version>
                <configuration>
                    <dependencyDetailsEnabled>true</dependencyDetailsEnabled>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-changelog-plugin</artifactId>
            </plugin>
        </plugins>
    </reporting>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>github</id>
            <name>GitHub linepro Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/linepro/ModellBahn</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
        </pluginRepository>
        <pluginRepository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub linepro Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/linepro/ModellBahn</url>
        </repository>
        <snapshotRepository>
            <id>github</id>
            <name>GitHub linepro Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/linepro/ModellBahn</url>
        </snapshotRepository>
    </distributionManagement>

</project>